cmake_minimum_required(VERSION 3.14)
project(monprojet C)
set(CMAKE_C_STANDARD 99)
add_executable(nom_du_projet main.c)
INCLUDE_DIRECTORIES(/usr/local/Cellar/allegro/5.2.6.0/include)
LINK_DIRECTORIES(/usr/local/Cellar/allegro/5.2.6.0/lib)
file(GLOB LIBRARIES "/usr/local/Cellar/allegro/5.2.6.0/lib/*.dylib")
message("LIBRARIES = ${LIBRARIES}")
TARGET_LINK_LIBRARIES(nom_du_projet ${LIBRARIES})